Modal overlap issue,exit popup and copy paste on one button

--- a/src/styles.css
+++ b/src/styles.css
@@ -297,31 +297,42 @@ app-creative-editor{
   }
   .modal-exit .modal-dialog .modal-content{
     border: none;
+    border-radius: 10px;
+    box-shadow: 0 1px 14px 0 rgba(0, 0, 0, 0.26);
+    background-color: #7a808d;
+    color: #fff;
+    color: #e6eaed;
   }
   .modal-exit h1{
-    font-size: 18px;
+    font-size: 22px;
     margin-bottom: 10px;
-    color: #ed3221;
-    font-weight: 900;
+    color: #ffffff;
+    font-weight: 600;
+    margin-top: 20px;
   }
   .modal-exit .modal-footer{
-    background-color: #f3f4f6;
+    background-color: #e6eaed;
     justify-content: space-between;
     border-top: none;
     font-size: 14px;
+    border-bottom-right-radius:10px;
+    border-bottom-left-radius:10px;
   }
   .modal-exit .modal-footer .btn-close{
-    border: 1px solid #d3d4d6;
+    border: 1px solid #c6cacd;
+    color: #292929;
   }
   .modal-exit .modal-footer .btn{
     font-size: 14px;
-    min-width: 115px;
-    border-radius: 2px;
+    min-width: 140px;
+    border-radius: 3px;
   }
   .modal-exit .modal-footer .btn-continue{
-    background-color: #ed3221;
+    border-radius: 3px;
+    box-shadow: inset 0 -2px 0 0 #c12718;
+    border: solid 1px #c12718;
+    background-color: #ec311f;
     color: #fff;
-    box-shadow: 0px 1px 6px #c12715;
   }
 
  
